Fixed the scrollbar on Chromium based browsers.

--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
     --accent-text-color: #0cf;
 }
 
-body, html {
+body,
+html {
     margin: 0;
     padding: 0;
     min-width: 100%;
@@ -76,7 +77,7 @@ footer {
     height: 10rem;
 }
 
-.flex-container > * {
+.flex-container>* {
     flex: 1;
 }
 
@@ -99,7 +100,7 @@ footer {
     margin: 0 0;
 }
 
-.phys-table > * {
+.phys-table>* {
     flex: 1;
     text-align: center;
     display: flex;
@@ -111,8 +112,8 @@ footer {
     border-radius: 0.5rem;
 }
 
-.phys-table>div {
-    overflow-x: scroll;
+.phys-table>div:nth-of-type(2) {
+    overflow-x: auto;
 }
 
 fold-group {
@@ -125,4 +126,25 @@ fold-group {
     fold-group {
         min-width: 20rem;
     }
+}
+
+/* Chrome Fix */
+::-webkit-scrollbar {
+    width: 0.33rem;
+    height: 0.33rem;
+}
+
+::-webkit-scrollbar-track {
+    background: #111;
+    opacity: 0.5;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 0.5rem;
+    border: 1px solid black;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
